--- a/One/index.html
+++ b/One/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="container">
-      <header class="header">
+      <header class="header" id="#top">
         <h1>Air Bnb Styled App</h1>
         <p>Learn More</p>
       </header>
@@ -29,11 +29,21 @@
             <button><i class="fa-solid fa-magnifying-glass"></i></button>
           </form>
         </div>
-        <div class="menu">
+        <div onclick="mobileMenu()" class="menu">
           <ul class="list-items">
-            <li><a href="#" class="links">Listings</a></li>
-            <li><a href="" class="links">Featured</a></li>
-            <li><a href="" class="links">Popular</a></li>
+            <li>
+              <a onclick="closeMenu()" href="#listings" class="links"
+                >Listings</a
+              >
+            </li>
+            <li>
+              <a onclick="closeMenu()" href="#featured" class="links"
+                >Featured</a
+              >
+            </li>
+            <li>
+              <a onclick="closeMenu()" href="#popular" class="links">Popular</a>
+            </li>
           </ul>
           <div class="mobile">
             <i class="fa-solid fa-bars"></i>
@@ -50,15 +60,15 @@
           <p>Artic</p>
         </div>
         <div class="icons">
-          <i class="fa-solid fa-rocket-launch"></i>
+          <i class="fa-solid fa-plane"></i>
           <p>Space</p>
         </div>
         <div class="icons">
-          <i class="fa-solid fa-trees"></i>
-          <p>Tress</p>
+          <i class="fa-solid fa-tree"></i>
+          <p>Trees</p>
         </div>
         <div class="icons">
-          <i class="fa-solid fa-buildings"></i>
+          <i class="fa-solid fa-house"></i>
           <p>City</p>
         </div>
         <div class="icons">
@@ -70,9 +80,218 @@
           <i class="fa-solid fa-umbrella-beach"></i>
           <p>Beach</p>
         </div>
-        <div class="icons">
-          <i class="fa-solid fa-game-board"></i>
-          <p>Games</p>
+      </div>
+      <div class="gallery" id="listings">
+        <div class="card-insider">
+          <img
+            src="https://images.unsplash.com/photo-1513584684374-8bab748fbf90?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fGhvdXNlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+            alt="first image"
+          />
+          <div class="card-title">
+            <div>
+              <h4>City, State</h4>
+              <i class="fa-solid fa-star">5.0</i>
+            </div>
+            <p class="gry">Host By Real Estate Agent</p>
+            <p class="gry">Jun 1-7</p>
+            <h5>$768</h5>
+          </div>
+        </div>
+        <div class="card-insider">
+          <img
+            src="https://images.unsplash.com/photo-1513584684374-8bab748fbf90?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fGhvdXNlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+            alt="first image"
+          />
+          <div class="card-title">
+            <div>
+              <h4>City, State</h4>
+              <i class="fa-solid fa-star">5.0</i>
+            </div>
+            <p class="gry">Host By Real Estate Agent</p>
+            <p class="gry">Jun 1-7</p>
+            <h5>$768</h5>
+          </div>
+        </div>
+        <div class="card-insider">
+          <img
+            src="https://images.unsplash.com/photo-1513584684374-8bab748fbf90?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fGhvdXNlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+            alt="first image"
+          />
+          <div class="card-title">
+            <div>
+              <h4>City, State</h4>
+              <i class="fa-solid fa-star">5.0</i>
+            </div>
+            <p class="gry">Host By Real Estate Agent</p>
+            <p class="gry">Jun 1-7</p>
+            <h5>$768</h5>
+          </div>
+        </div>
+        <div class="card-insider">
+          <img
+            src="https://images.unsplash.com/photo-1513584684374-8bab748fbf90?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fGhvdXNlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+            alt="first image"
+          />
+          <div class="card-title">
+            <div>
+              <h4>City, State</h4>
+              <i class="fa-solid fa-star">5.0</i>
+            </div>
+            <p class="gry">Host By Real Estate Agent</p>
+            <p class="gry">Jun 1-7</p>
+            <h5>$768</h5>
+          </div>
+        </div>
+        <div class="card-insider">
+          <img
+            src="https://images.unsplash.com/photo-1513584684374-8bab748fbf90?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fGhvdXNlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+            alt="first image"
+          />
+          <div class="card-title">
+            <div>
+              <h4>City, State</h4>
+              <i class="fa-solid fa-star">5.0</i>
+            </div>
+            <p class="gry">Host By Real Estate Agent</p>
+            <p class="gry">Jun 1-7</p>
+            <h5>$768</h5>
+          </div>
+        </div>
+        <div class="card-insider">
+          <img
+            src="https://images.unsplash.com/photo-1513584684374-8bab748fbf90?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fGhvdXNlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+            alt="first image"
+          />
+          <div class="card-title">
+            <div>
+              <h4>City, State</h4>
+              <i class="fa-solid fa-star">5.0</i>
+            </div>
+            <p class="gry">Host By Real Estate Agent</p>
+            <p class="gry">Jun 1-7</p>
+            <h5>$768</h5>
+          </div>
+        </div>
+        <div class="card-insider">
+          <img
+            src="https://images.unsplash.com/photo-1513584684374-8bab748fbf90?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fGhvdXNlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+            alt="first image"
+          />
+          <div class="card-title">
+            <div>
+              <h4>City, State</h4>
+              <i class="fa-solid fa-star">5.0</i>
+            </div>
+            <p class="gry">Host By Real Estate Agent</p>
+            <p class="gry">Jun 1-7</p>
+            <h5>$768</h5>
+          </div>
+        </div>
+        <div class="card-insider">
+          <img
+            src="https://images.unsplash.com/photo-1513584684374-8bab748fbf90?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fGhvdXNlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+            alt="first image"
+          />
+          <div class="card-title">
+            <div>
+              <h4>City, State</h4>
+              <i class="fa-solid fa-star">5.0</i>
+            </div>
+            <p class="gry">Host By Real Estate Agent</p>
+            <p class="gry">Jun 1-7</p>
+            <h5>$768</h5>
+          </div>
+        </div>
+      </div>
+      <div class="featured-section" id="featured">
+        <div class="title">
+          <h1>Featured</h1>
+        </div>
+        <div class="image-wrapper">
+          <div class="img grid">
+            <img
+              src="https://images.unsplash.com/photo-1593604340846-4fbe9763a8f3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8aG91c2V8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+              alt=""
+            />
+          </div>
+          <div class="img">
+            <img
+              src="https://images.unsplash.com/photo-1593604340846-4fbe9763a8f3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8aG91c2V8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+              alt=""
+            />
+          </div>
+          <div class="img">
+            <img
+              src="https://images.unsplash.com/photo-1593604340846-4fbe9763a8f3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8aG91c2V8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+              alt=""
+            />
+          </div>
+          <div class="img">
+            <img
+              src="https://images.unsplash.com/photo-1593604340846-4fbe9763a8f3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8aG91c2V8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+              alt=""
+            />
+          </div>
+          <div class="img">
+            <img
+              src="https://images.unsplash.com/photo-1593604340846-4fbe9763a8f3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8aG91c2V8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+      <div class="popular" id="popular">
+        <div class="title">
+          <h1>Popular</h1>
+        </div>
+        <div class="image-wrapper">
+          <div class="img">
+            <img
+              src="https://images.unsplash.com/photo-1593604340846-4fbe9763a8f3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8aG91c2V8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+              alt=""
+            />
+          </div>
+          <div class="img">
+            <img
+              src="https://images.unsplash.com/photo-1593604340846-4fbe9763a8f3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8aG91c2V8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+              alt=""
+            />
+          </div>
+          <div class="img">
+            <img
+              src="https://images.unsplash.com/photo-1593604340846-4fbe9763a8f3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8aG91c2V8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+              alt=""
+            />
+          </div>
+          <div class="img">
+            <img
+              src="https://images.unsplash.com/photo-1593604340846-4fbe9763a8f3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8aG91c2V8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+              alt=""
+            />
+          </div>
+          <div class="img">
+            <img
+              src="https://images.unsplash.com/photo-1593604340846-4fbe9763a8f3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8aG91c2V8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+      <div class="chevron">
+        <a href="#top">
+          <i class="fa-solid fa-chevron-up"></i>
+        </a>
+      </div>
+      <div class="footer">
+        <div class="left-col">
+          <l1>Travel</l1>
+          <l1>Air Travel</l1>
+          <l1>Terms</l1>
+          <l1>Agent</l1>
+        </div>
+        <div class="right-col">
+          <li>Support</li>
+          <li>Contact</li>
         </div>
       </div>
     </div>
